WR#268564 - Fix white space around footer in mobile view

--- a/ckanext/dia_theme/fanstatic/dia_custom.css
+++ b/ckanext/dia_theme/fanstatic/dia_custom.css
@@ -8590,6 +8590,7 @@ h4 small {
   background-image: none;
   min-height: 55px;
   padding: 20px 0;
+  box-shadow: 0 500px 0 500px #0c536b;
 }
 .site-footer:before,
 .site-footer:after {
