--- a/ckanext/dia_theme/less/footer.less
+++ b/ckanext/dia_theme/less/footer.less
@@ -1,6 +1,7 @@
 .site-footer {
   .masthead();
   padding: 20px 0;
+  box-shadow: 0 500px 0 500px @footerBackgroundColor;
 
   a:hover {
     color: @white;
